# obs-rebrand-service

./: .env.example  .gitattributes  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  rebrand.yaml
configs/clients/: _template.yaml  acme-corp.yaml  apex-health.yaml  sterling-financial.yaml
docs/: ARCHITECTURE.md  DOCKER.md  GITHUB.md
scripts/: manage.py
src/rebrand_service/: __init__.py  api.py  batch.py  cli.py  docx_rebrander.py  models.py  pptx_rebrander.py
templates/logos/: .gitkeep
tests/: test_api.py  test_batch.py  test_models.py  test_rebranders.py
