[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrand-service"
version = "0.1.0"
description = "Batch document rebranding engine for MSP multi-client environments"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
]

[project.scripts]
rebrand = "rebrand_service.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # typer.Option() in function defaults is standard Typer pattern

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
